tests/diagnostics/snapshots/test_leading_tab_characters_multi_line_span.txt
Error: Can't compare apples with oranges (at <unknown>:1:1)
  | 
1 |     super_apple := apple ** 2
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  | ...
3 |     apple == orange
  | ^^^^^^^^^^^^^^^^^^^ Comparison attempted here